# CodeJeNN

./: .gitignore  CITATION.cff  README.md  TODO.txt  citation.cff  license.txt  readme.md  requirements.txt
archive/src_v1/: h5_codegen.py  onnx_codegen.py
archive/src_v2/: README.md  codegen_methods.py  test.cpp
archive/src_v3/: README.md  generate.sh
archive/src_v4/: README.md
examples/: NN_readme.md  cnn2.h5  example2.h5  test_model_1.h5
examples/NN1/: NN1.h5  mean_input.txt  mean_output.txt  state_dict.pth  std_input.txt  std_output.txt
examples/NN13/: NN13.h5  mean_input.txt  mean_output.txt  state_dict.pth  std_input.txt  std_output.txt
examples/NN16/: NN16.h5  (+4 more)
others/: HDF5 File Guide.md  Layers We Support.md  hdf5_file_type_101.md  layers.md  supported_layers.md
src/: .gitignore  Makefile  README.md  TODO.txt  chatgpt.h  clean.sh  compare_LU.py  custom_activation.py  generate.sh  main.py  mlp_eigen.py  pip_requirements.txt  python_requirements.txt  requirements.txt  summary.py  test  test.cpp  test_model.py  test_model_1.h
src/generated_model/: CMakeLists.txt  a.out  chatgpt  chatgpt.h  chatgpt2  chatgpt2.h  cnn.h  cnn1.h  cnn2.h  cnn2_2.0.h  cnn2_copilot.h  cnn2_test.cpp  cnn3.h  cnn4.h  cnn6.h  cnn6_edited.h  cnn_1.h  cnn_3.h  example.h  layer.csv  makefile  newArray.h  newArray_test.cpp  newForLoop  newForLoop.h  newForLoop_test.cpp  newVariadic  newVariadic.h  newVariadic_test.cpp  original  original.h  original_test.cpp  runtimeNewArray.txt  runtimeOriginal.txt  test  test.cpp  total_time.cpp
tutorials/: cnn.py  mlp.py  supported_layers.md
(+560 files in other folders)
